<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"


        tools:context=".MainActivity"
        android:orientation="vertical"
        android:layout_marginBottom="8dp"
        android:background="#E0F8F7">



    <Switch
            android:text="@string/txtMulher"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            tools:checked="false"
            android:showText="false"
            android:id="@+id/swGenero"/>
    <TextView
            android:text="@string/txtIdade"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txIdade"/>
    <SeekBar
            style="@style/Widget.AppCompat.SeekBar.Discrete"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:max="100"
            android:progress="1"
            android:id="@+id/skIdade"/>
    <TextView
            android:text="@string/txtPeso"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txPeso"/>
    <SeekBar
            style="@style/Widget.AppCompat.SeekBar.Discrete"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:max="150"
            android:progress="1"
            android:id="@+id/skPeso"/>
    <TextView
            android:text="@string/txtAltura"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txAltura"/>
    <SeekBar
            style="@style/Widget.AppCompat.SeekBar.Discrete"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:max="200"
            android:progress="1"
            android:id="@+id/skAltura"/>
    <TextView
            android:text="@string/txtAtividade"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txAtividade"/>
    <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/rdgGrupo">
        <RadioButton
                android:text="@string/txtSedentario"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/rbSedentario"
                android:layout_weight="1"/>
        <RadioButton
                android:text="@string/txtModerado"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/rbModerado"
                android:layout_weight="1"/>
        <RadioButton
                android:text="@string/txtIntenso"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/rbIntenso"
                android:layout_weight="1"/>
    </RadioGroup>
    <Button
            android:text="@string/btnCalcular"
            android:layout_width="374dp"
            android:layout_height="wrap_content"
            tools:layout_editor_absoluteY="313dp"
            android:id="@+id/btnCalcular"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:background="#A9D0F5"
            android:layout_marginStart="8dp"/>
    <RatingBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/ratingBar"
            android:numStars="@integer/numEstrelas"
            android:rating="@integer/mimEstrelas"
            android:layout_gravity="center"
            android:max="@integer/numEstrelas"
            android:visibility="visible"
            android:stepSize="@integer/incio"/>
    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:layout_editor_absoluteY="418dp"
            android:id="@+id/txtResultado"
            android:textAlignment="center" android:text="@string/txtResultado"/>
    <Button
            android:text="@string/btnPesoIdeal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/btnPesoIdeal"/>

    //button avançar para prómima activity

</LinearLayout>
